@@ -516,7 +516,7 @@ IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
   MACRO_TEST(__MMX__ HAVE_MMX)
   IF(HAVE_MMX)
     SET(ARCH_OBJS ${ARCH_OBJS} ${x86_MMX_OBJS})
-  ENDIF(HAVE_MMX)
+  
 
   IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86")
     # nasm stuff
@@ -534,7 +534,9 @@ IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
       ENDIF(HAVE_MMX)
     ELSE(NOT HAVE_NASM MATCHES "NOTFOUND")
 
-      MESSAGE("Warning: MMX capability found, but NASM not found. Without NASM no SIMD detection (MMX enabled by default) and no MMX memcopy is built.")
+      IF(HAVE_MMX)
+        MESSAGE("Warning: MMX capability found, but NASM not found. Without NASM no SIMD detection (MMX enabled by default) and no MMX memcopy is built.")
+      ENDIF(HAVE_MMX)
     ENDIF(NOT HAVE_NASM MATCHES "NOTFOUND")
   ENDIF(CMAKE_SYSTEM_MACHINE MATCHES "i.86")
 
@@ -548,6 +550,7 @@ IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
   IF(NOT OPTIM_GENERIC)
     ADD_DEFINE(USE_LIGHT_GEN_MIXING)
   ENDIF(NOT OPTIM_GENERIC)
+  ENDIF(HAVE_MMX)
 ELSE(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
 
   SET(ARCH_OBJS ${PORTABLE_OBJS})
